# funicular

./: .containerignore  .dockerignore  .editorconfig  .gitignore  .yarnrc.yml  Cargo.toml  Directory.Packages.props  Dockerfile  README.md  compose.yml  funicular.control  funicular_ext.control  join.sql  justfile  package.json  postgrest.conf  tailwind.config.js  test.sql  tsconfig.json
.config/: dotnet-tools.json
app/: .env  .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  bun.lockb  deno.json  fresh.config.ts  fresh.gen.ts  games-query.graphql  games.graphql  index.html  index.ts  openapitools-ts.yml  package-lock.json  package.json  railwind.config.ron  schema.graphql  uno.config.ts
app/api/: .openapi-generator-ignore
app/api/.openapi-generator/: FILES
app/components/: Button.tsx  breadcrumb.tsx  button.tsx
app/islands/: Counter.tsx  checkbox.tsx  counter.tsx  dialog.tsx  game-grid.tsx
app/lib/: funicular-request.ts
app/models/: audit.ts  character-numeric-field.ts  character.ts  field.ts
app/openapitools/: ts.yml
app/openapitools-templates/: index.mustache
app/openapitools-templates/types/: ObjectParamAPI.mustache
app/openapitools/templates/model/: model.mustache
app/plugins/: unocss.ts
app/public/: site.css
app/routes/: _404.tsx  _500.tsx  _app.tsx  _layout.tsx  actors.tsx  characters.tsx  games.tsx  index.tsx
app/routes/actors/: [id].tsx
app/routes/characters/: [character].tsx
app/routes/games/: [gameSlug].tsx  [game].tsx  [id].tsx  [name].tsx
app/routes/games/[gameSlug]/actors/: [actorKindSlug].tsx
app/routes/games/[gameSlug]/actors/[actorKindSlug]/: [actorSlug].tsx
app/routes/games/[game]/: actors.tsx  skills.tsx  traits.tsx
app/routes/games/[game]/actors/: [actor].tsx
app/routes/games/[game_id]/: skills.tsx
app/src/: app.rs  components.rs  main.rs  routes.rs
app/src/app/: games.rs  home.rs  mod.rs  not_found.rs
app/src/app/games/: game.rs  mod.rs
app/src/components/: dialog.rs  header.rs  mod.rs  table.rs
app/src/routes/: games.rs  index.rs  mod.rs  partials.rs  styles.rs
app/src/routes/games/: game.rs
app/src/routes/games/game/: actors.rs  gears.rs  skills.rs  traits.rs
app/src/routes/games/game/actors/: actor.rs
app/src/routes/partials/: actor_kinds_table.rs  actors_table.rs  game_form.rs  game_name.rs  games_table.rs  gear_kinds_table.rs  mod.rs  skills_table.rs  traits_table.rs
app/styles/: button.ts
app/utils/: env.ts
db/: Cargo.toml  Containerfile  atlas.hcl  funicular_db.control  openapi.yml  schema.hcl
db/migrations/: 20230719210347_init.sql  20230719210436_init_auth.sql  20230719211029_actor_num_skill.sql  20230719211301_gear_num_skill.sql  20230819220115_slug.sql  20230910180918_init.sql  20230910184712_actor_num_skill.sql  20230910184717_gear_num_skill.sql  231107181259_init.sql  atlas.sum
db/src/: base58.rs  into_pgrx_arg.rs  lib.rs  migrations.rs  seed.rs  slugify.rs  uuid7.rs
db/src/migrations/: 20230910180918_init.sql  20230910184712_actor_num_skill.sql  20230910184717_gear_num_skill.sql  20230930093227_actor_skill_agg.sql  _000000000000_migrations.rs  _230603095553_init.rs
db/src/migrations/_000000000000_migrations/: down.sql  mod.rs  up.sql
db/src/migrations/_230603095553_init/: down.sql  mod.rs  up.sql
db/src/migrations/_230618102627_auth/: down.sql  mod.rs  up.sql
db/src/migrations/_230624135332_items/: down.sql  up.sql
db/src/migrations/_230625095802_auth/: down.sql  up.sql
db/src/migrations/_230625095922_game/: down.sql  up.sql
db/src/migrations/_230625105931_actor/: down.sql  up.sql
db/src/migrations/_230628175736_gear/: down.sql  up.sql
derive/: Cargo.toml
src/: char_aggr_sync.rs  fun_type.rs  lib.rs  migrations.rs  models.rs  refresh_char_aggr.rs  refresh_char_aggr_trigger.rs  sea_ext.rs  sea_select.rs  sea_select_ext.rs  seed.rs  spi_select.rs  (+2 more)
(+213 files in other folders)
