[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
axum-extra = { version = "0.9.0", features = ["typed-routing", "form"] }
markup = "0.15.0"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "bigdecimal"] }
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["fs"] }
tower-livereload = "0.9.1"
uuid = { version = "1.6.1", features = ["serde"] }
