[package]
name = "funicular_db"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
# pg11 = ["pgrx/pg11", "pgrx-tests/pg11"]
# pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
# pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
# pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg_test = []

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
funicular_derive = { version = "0.1.0", path = "../derive" }
pgrx = { version = "0.9.5" }
rand = { version = "0.8.5", default-features = false }
uuid = { version = "1.3.3" }
uuid7 = { version = "0.6.3", features = ["serde", "uuid"] }

[dev-dependencies]
pgrx-tests = { version = "0.9.5" }
