[package]
name = "funicular_db"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg16"]
# pg11 = ["pgrx/pg11", "pgrx-tests/pg11"]
# pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
# pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
# pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg_test = []

[dependencies]
bs58 = "0.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
pgrx = { version = "0.10.2" }
rand = { version = "0.8.5", default-features = false }
regex = "1.9.5"
uuid = { version = "1.4.1" }
uuid7 = { version = "0.7.2", features = ["serde", "uuid"] }

[dev-dependencies]
pgrx-tests = { version = "0.10.2" }
