[package]
name = "funicular_db"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg16"]
# pg11 = ["pgrx/pg11", "pgrx-tests/pg11"]
# pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
# pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
# pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg_test = []

[dependencies]
bs58 = "0.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
pgrx = { version = "0.11.0" }
rand = { version = "0.8.5", default-features = false }
regex = "1.10.2"
uuid = { version = "1.6.1", features = ["v7"] }

[dev-dependencies]
pgrx-tests = { version = "0.11.0" }
